--- a/semana7.html
+++ b/semana7.html
@@ -75,9 +75,9 @@
 					<div class="row d-flex align-items-center justify-content-center">
 						<div class="about-content col-lg-12">
 							<h1 class="text-white">
-								SEMANA N°5
+								SEMANA N°7
 						        <h1 class="text-white">
-								Conceptos de solución
+								Presentación ELEVATOR PITCH
 							</h1>	
 						</div>	
 					</div>
@@ -87,49 +87,30 @@
 				<!-- Start Sample Area -->
 		        <section class="row d-flex align-items-center justify-content-center">
 				<div class="about-content col-lg-12">
-					<h1 class="text-black">Desarrollo de conceptos</h1>	
+					<h1 class="text-black">ELEVATOR PICH</h1>	
 				</div>
 			</section>
 			<!-- End Sample Area -->
 
 			<!-- Start Sample Area -->
 				 <div class="col-md-9 mt-sm-10 left-align-p">
-								<p>Una vez que hemos desarrollado los conceptos que cumplen la estrategia, debemos evaluarlos bajo el criterio de funcionalidad, para ello utilizamos los siguientes.</p>
+								<p>Sabían que entre 250 000 y  500 000 personas sufren una Lesión Medular Espinal al año a nivel mundial.Este tipo de lesión causa un impacto personal y social, ya que los cambios en el cuerpo de las personas con paraplejia generan dependencia, afectan la imagen corporal, reducen las oportunidades de empleo, interacción social y estabilidad económica.
+
+Un tipo de lesión es la paraplejia a nivel L5 y S1 que tiene como consecuencia la pérdida de sensibilidad en extremidades inferiores y  formación de pie equino el cual impide realizar la marcha.
+
+Una de las ortesis existentes que contrarrestan este problema es el  AFO rígido que se destaca por su gran ligereza, versatilidad y capacidad de termoconformacion, pero, restringe la flexión plantar y aumenta la flexión de rodilla durante el apoyo. Por otra parte está el DAFO que es flexible, liviano y permite estabilidad para la marcha,sin embargo la mayoría de estudios realizados sobre su uso han sido tan solo a corto plazo.
+
+Nuestro equipo de trabajo ha identificado este problema y hemos creado “ Dynamic lightcheap ” una órtesis tobillo/pie (OTP) dinámica, funcionalmente eficiente y personalizada que permite mantener la estabilidad en el tobillo,debido a la banda elástica y los velcros integrados de manera que el paciente mejore el proceso de caminar. 
+“ Dynamic lightcheap  ” en comparación a las OTPs descritas anteriormente, permite la dorsiflexión del pie siendo a su vez más liviano,de bajo costo y resistente ya que será fabricada con polietileno.  
+
+El mercado en el que nos enfocamos es Claudia una mujer de 35 años,casada procedente de Cercado de Lima que asiste a un centro de estudios superiores y fue herida por impacto de bala en un asalto que le originó esta lesión.
+
+Nuestro equipo tiene la expectativa de reinsertar a Claudia a la sociedad activamente, que no se frustren sus sueños de terminar sus estudios; así mismo no depender de sus familiares,pareja y amigos para movilizarse y librarse de los traumas emocionales ocasionados por tal desgracia, gracias.
+.</p>
 							</div>
-				<div class="section-top-center">
-					<div style="text-align:center">
-						<div class="row gallery-item  justify-content-center">
-							<div class="col-md-4">
-							<img src="img/elements/cuadro1.PNG" alt="" class="png-fluid">
 						</div>
-					</div>
-				</div>
-							<div class="section-top-center">
-					<div style="text-align:center">
-						<div class="row gallery-item  justify-content-center">
-							<div class="col-md-4">
-							<img src="img/elements/cuadro2.PNG" alt="" class="png-fluid">
-					        </div>
-					</div>
-				</div>
-							<div class="section-top-center">
-					<div style="text-align:center">
-						<div class="row gallery-item  justify-content-center">
-							<div class="col-md-4">
-							<img src="img/elements/cuadro3.PNG" alt="" class="png-fluid">
-					       </div>
-					</div>
-				</div>
-				<!-- End Sample Area -->
-				<!-- Start Sample Area -->
-				 <div class="col-md-9 mt-sm-10 left-align-p">
-								<p>0= No satisface</p>
-					 <p>1= Aceptable</p>
-					 <p>2= Suficiente</p>
-					 <p>3= Bien </p>
-					 <p>4= Muy bien (ideal)</p>
-					 <p>Proyecto óptimo: Propuesta de solución 3</p>
-							</div>
+				    </div>
+			
 								<!-- End Sample Area -->
 								
 								
