--- a/semana9.html
+++ b/semana9.html
@@ -100,7 +100,14 @@
 					<div style="text-align:center">
 						<div class="row gallery-item  justify-content-center">
 							<div class="col-md-4">
-								<a href="img/elements/re1.PNG" width="200" height="200" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/re1.PNG);"></div></a>
+								<a href="img/elements/ren1.PNG" width="200" height="200" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/ren1.PNG);"></div></a>
+						          </div>
+											<div class="section-top-center">
+					<div class="section-top-center">
+					<div style="text-align:center">
+						<div class="row gallery-item  justify-content-center">
+							<div class="col-md-4">
+								<a href="img/elements/ren2.PNG" width="200" height="200" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/ren2.PNG);"></div></a>
 						          </div>
 					        </div>
 					</div>
