--- a/semana7.html
+++ b/semana7.html
@@ -93,7 +93,7 @@
 			<!-- End Sample Area -->
 
 			<!-- Start Sample Area -->
-				 <div class="col-md-5 mt-sm-5 left-align-p">
+				 <div class="col-md-5 mt-sm-5 center-align-p">
 								<p>Sabían que entre 250 000 y  500 000 personas sufren una Lesión Medular Espinal al año a nivel mundial.Este tipo de lesión causa un impacto personal y social, ya que los cambios en el cuerpo de las personas con paraplejia generan dependencia, afectan la imagen corporal, reducen las oportunidades de empleo, interacción social y estabilidad económica.
 
 Un tipo de lesión es la paraplejia a nivel L5 y S1 que tiene como consecuencia la pérdida de sensibilidad en extremidades inferiores y  formación de pie equino el cual impide realizar la marcha.
