--- a/semana7.html
+++ b/semana7.html
@@ -93,6 +93,7 @@
 			<!-- End Sample Area -->
 
 			<!-- Start Sample Area -->
+				 <section class="row d-flex align-items-center justify-content-center">
 				 <div class="col-md-5 mt-sm-5 center-align-p">
 								<p>Sabían que entre 250 000 y  500 000 personas sufren una Lesión Medular Espinal al año a nivel mundial.Este tipo de lesión causa un impacto personal y social, ya que los cambios en el cuerpo de las personas con paraplejia generan dependencia, afectan la imagen corporal, reducen las oportunidades de empleo, interacción social y estabilidad económica.
 
@@ -108,6 +109,8 @@ El mercado en el que nos enfocamos es Claudia una mujer de 35 años,casada proce
 Nuestro equipo tiene la expectativa de reinsertar a Claudia a la sociedad activamente, que no se frustren sus sueños de terminar sus estudios; así mismo no depender de sus familiares,pareja y amigos para movilizarse y librarse de los traumas emocionales ocasionados por tal desgracia, gracias.
 .</p>
 							</div>
+					 </section>
+				                    </div> 
 						</div>
 				    </div>
 			
