--- a/semana9.html
+++ b/semana9.html
@@ -107,15 +107,14 @@
 					<div style="text-align:center">
 						<div class="row gallery-item  justify-content-center">
 							<div class="col-md-4">
-								<a href="img/elements/ren2.PNG" width="200" height="200" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/ren2.PNG);"></div></a>
+								<a href="img/elements/ren2.PNG" width="300" height="300" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/ren2.PNG);"></div></a>
 						          </div>
 					        </div>
 					</div>
 			<!-- End Sample Area -->
 			<!-- Start Sample Area -->
             		 <div class="col-md-9 mt-sm-10 left-align-p">
-								<p>Usamos como referencia el pie impreso (maniquí) para trabajar e identificar los puntos de ajuste y de soporte para el diseño de nuestra ortesis.
-</p>
+								<p>Para la impresión 3D del AFO se consideró el tipo de filamento</p>
 							</div>
 				<!-- End Sample Area -->
 				<!-- Start Sample Area -->
@@ -124,7 +123,7 @@
 					<div style="text-align:center">
 						<div class="row gallery-item  justify-content-center">
 							<div class="col-md-4">
-								<a href="img/elements/re2.PNG" width="200" height="200" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/re2.PNG);"></div></a>
+								<a href="img/elements/cuadropla.PNG" width="200" height="200" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/cuadropla.PNG);"></div></a>
 						          </div>
 					        </div>
 					</div>
