--- a/semana9.html
+++ b/semana9.html
@@ -116,6 +116,8 @@
             		 <div class="col-md-9 mt-sm-10 left-align-p">
 								<p>Para la impresión 3D del AFO se consideró el tipo de filamento</p>
 							</div>
+						</div>
+					</div>
 				<!-- End Sample Area -->
 				<!-- Start Sample Area -->
 				<div class="section-top-center">
