--- a/semana9.html
+++ b/semana9.html
@@ -91,10 +91,8 @@
 						<h3 class="mb-30">DISEÑO Y PREPARACIÓN DEL AFO  </h3>
 							</div>
 				 <div class="col-md-9 mt-sm-10 left-align-p">
-								<p> Después de identificar los criterios para el diseño basándonos  en la marcha del paciente procedemos a desarrollar la ortesis con el programa MeshMixer a partir del modelado 3D, para ello definimos ÁNGULOS Y el radio del circulo de 2.62 cm 
-
-.</p>
-							</div>
+								<p> Después de identificar los criterios para el diseño basándonos  en la marcha del paciente procedemos a desarrollar la ortesis con el programa MeshMixer a partir del modelado 3D, para ello definimos ÁNGULOS Y el radio del circulo de 2.62 cm .</p>
+					</div>
 				<div class="section-top-center">
 					<div class="section-top-center">
 					<div style="text-align:center">
@@ -102,14 +100,15 @@
 							<div class="col-md-4">
 								<a href="img/elements/ren1.PNG" width="200" height="200" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/ren1.PNG);"></div></a>
 						          </div>
-											<div class="section-top-center">
+							<!-- End banner Area -->
+							<!-- Start Sample Area -->
+				 <div class="section-top-center">
 					<div class="section-top-center">
 					<div style="text-align:center">
 						<div class="row gallery-item  justify-content-center">
 							<div class="col-md-4">
 								<a href="img/elements/ren2.PNG" width="200" height="200" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/ren2.PNG);"></div></a>
 						          </div>
-					
 			<!-- End Sample Area -->
 			<!-- Start Sample Area -->
             		 <div class="col-md-9 mt-sm-10 left-align-p">
