--- a/semana9.html
+++ b/semana9.html
@@ -106,6 +106,8 @@
 							<div class="col-md-4">
 								<a href="img/elements/ren2.PNG" width="200" height="200" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/ren2.PNG);"></div></a>
 						          </div>
+						<!-- End Sample Area -->
+						<!-- Start Sample Area -->
             		 <div class="col-md-9 mt-sm-10 left-align-p">
 								<p>Para la impresión 3D del AFO se consideró el tipo de filamento</p>
 							</div>
