--- a/semana9.html
+++ b/semana9.html
@@ -108,9 +108,15 @@
 						          </div>
 						<!-- End Sample Area -->
 						<!-- Start Sample Area -->
-            		 <div class="col-md-9 mt-sm-10 left-align-p">
-								<p>Para la impresión 3D del AFO se consideró el tipo de filamento</p>
+						<div class="whole-wrap">
+				<div class="container">
+					<div class="section-top-border">
+						<h3 class="mb-30"></h3>
 							</div>
+				 <div class="col-md-9 mt-sm-10 left-align-p">
+								<p>
+Para la impresión 3D del AFO se consideró el tipo de filamento PLA tomando las siguientes consideraciones: </p>
+					                 </div>
 						</div>
 					</div>
 				<!-- End Sample Area -->
