--- a/semana9.html
+++ b/semana9.html
@@ -123,6 +123,13 @@ Para la impresión 3D del AFO se consideró el tipo de filamento PLA tomando las
 							<div class="col-md-4">
 								<a href="img/elements/cuadropla.PNG" width="200" height="200" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/cuadropla.PNG);"></div></a>
 						          </div>
+							<div class="whole-wrap">
+				<div class="container">
+					<div class="section-top-border">
+						<h3 class="mb-30"></h3>
+							</div>
+				 <div class="col-md-9 mt-sm-10 left-align-p">
+								<p>Basándonos en las necesidades requeridas para el proyecto y las propiedades de los filamentos concluimos que el filamento PLA es el más óptimo para la realización del proyecto.</p>
 					<!-- End Sample Area -->
 					
 					
