--- a/semana9.html
+++ b/semana9.html
@@ -104,7 +104,7 @@
 					<div style="text-align:center">
 					<div class="row gallery-item  justify-content-center">
 							<div class="col-md-4">
-								<a href="img/elements/ren2.PNG" width="200" height="200" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/ren2.PNG);"></div></a>
+								<a href="img/elements/ren2.PNG" width="200" height="250" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/ren2.PNG);"></div></a>
 						          </div>
 						<!-- End Sample Area -->
 						<!-- Start Sample Area -->
@@ -121,7 +121,7 @@ Para la impresión 3D del AFO se consideró el tipo de filamento PLA tomando las
 					<div style="text-align:center">
 						<div class="row gallery-item  justify-content-center">
 							<div class="col-md-4">
-								<a href="img/elements/cuadropla.PNG" width="200" height="200" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/cuadropla.PNG);"></div></a>
+								<a href="img/elements/cuadropla1.PNG" width="200" height="200" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/cuadropla1.PNG);"></div></a>
 						          </div>
 							<div class="whole-wrap">
 				<div class="container">
