--- a/semana9.html
+++ b/semana9.html
@@ -96,13 +96,13 @@
 				<div class="section-top-center">
 					<div class="section-top-center">
 					<div style="text-align:center">
-						<div class="row gallery-item  justify-content-center">
+						<div class="row gallery-item  justify-content-left">
 							<div class="col-md-4">
 								<a href="img/elements/ren1.PNG" width="200" height="200" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/ren1.PNG);"></div></a>
 						          </div>
 					<div class="section-top-center">
 					<div style="text-align:center">
-					<div class="row gallery-item  justify-content-center">
+					<div class="row gallery-item  justify-content-right">
 							<div class="col-md-4">
 								<a href="img/elements/ren2.PNG" width="100" height="300" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/ren2.PNG);"></div></a>
 						          </div>
