--- a/semana9.html
+++ b/semana9.html
@@ -93,6 +93,9 @@
 				 <div class="col-md-9 mt-sm-10 left-align-p">
 								<p> Después de identificar los criterios para el diseño basándonos  en la marcha del paciente procedemos a desarrollar la ortesis con el programa MeshMixer a partir del modelado 3D, para ello definimos ÁNGULOS Y el radio del circulo de 2.62 cm .</p>
 					</div>
+					</div>
+					</div>
+					
 				<div class="section-top-center">
 					<div class="section-top-center">
 					<div style="text-align:center">
