--- a/semana9.html
+++ b/semana9.html
@@ -93,13 +93,11 @@
 				 <div class="col-md-9 mt-sm-10 left-align-p">
 								<p> Después de identificar los criterios para el diseño basándonos  en la marcha del paciente procedemos a desarrollar la ortesis con el programa MeshMixer a partir del modelado 3D, para ello definimos ÁNGULOS Y el radio del circulo de 2.62 cm .</p>
 					</div>
-					</div>
-					</div>
 					
 				<div class="section-top-center">
 					<div class="section-top-center">
 					<div style="text-align:center">
-						<div class="row gallery-item  justify-content-left">
+						<div class="row gallery-item  justify-content-center">
 							<div class="col-md-4">
 								<a href="img/elements/ren1.PNG" width="200" height="200" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/ren1.PNG);"></div></a>
 						          </div>
