--- a/semana9.html
+++ b/semana9.html
@@ -103,9 +103,9 @@
 						          </div>
 					<div class="section-top-center">
 					<div style="text-align:center">
-					<div class="row gallery-item  justify-content-right">
+					<div class="row gallery-item  justify-content-center">
 							<div class="col-md-4">
-								<a href="img/elements/ren1.PNG" width="100" height="300" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/ren2.PNG);"></div></a>
+								<a href="img/elements/ren2.PNG" width="100" height="300" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/ren3.PNG);"></div></a>
 						          </div>
 						<!-- End Sample Area -->
 						<!-- Start Sample Area -->
