--- a/semana9.html
+++ b/semana9.html
@@ -91,7 +91,7 @@
 						<h3 class="mb-30">DISEÑO Y PREPARACIÓN DEL AFO  </h3>
 							</div>
 				 <div class="col-md-9 mt-sm-10 left-align-p">
-								<p> Después de identificar los criterios para el diseño basándonos  en la marcha del paciente procedemos a desarrollar la ortesis con el programa MeshMixer a partir del modelado 3D, para ello definimos ÁNGULOS Y el radio del circulo de 2.62 cm .</p>
+								<p>Después de identificar los criterios para el diseño basándonos  en la marcha del paciente procedemos a desarrollar la ortesis con el programa MeshMixer a partir del modelado 3D, para ello definimos el ángulo de 50° del pie como punto de equilibrio , el radio de ambos círculos es de de 2.62 cm en la zona del peroné, luego se realizó un corte plano diagonal de 9 cm en la sección del talón de manera que no afecte al momento de pisar y finalmente una abertura de 0.78cm a la mitad de la sección que une la tibia con el pie para que entre la ortesis con facilidad al pie del paciente.</p>
 					</div>
 					
 				<div class="section-top-center">
