--- a/semana6.html
+++ b/semana6.html
@@ -108,16 +108,10 @@
 						<div class="row">
 						<div class="col-md-9 mt-sm-10 left-align-p">
 						<p>1.Escaner 3D </p>
-						<p>2.Espuma de polietileno 2mmx10m :Es un material de baja densidad, facil mecanizacion, alta flexibilidad y resistencia térmica, además es un material reutilizable con una alta resistencia a la proliferación de hongos y bacterias.En comparación con otras espumas (espuma viscoelástica) es un material relativamente económico y tiene muy buena adherencia a otros materiales.
-</p>
-					        <p>3.Velcro x3u:El velcro es un material muy fuerte capaz de contener una gran cantidad de peso, en el uso de nuestra ortesis tiene la función de fijación de una determinada posición y para la presión y ajuste  de esta ,
-
-</p>
-					        <p>4.Lámina de Polietileno x10m:La elección de este material es por su gran resistencia química y térmica , alta flexibilidad, incluso en temperaturas bajas, es muy ligero y resistente al agua, ausencia de toxicidad por lo cual es biocompatible con la piel </p>
-					       <p>5.Banda elástica de resistencia x4u : 
-       Este material se caracteriza por su elasticidad, este apoyo se diseña para ofrecer  estabilidad y la protección superior del tobillo e inferior del pie.
-</p>
-					       <p>6.Tornillos</p>
+						<p>2.Espuma de polietileno 2mmx10m :Es un material de baja densidad, facil mecanizacion, alta flexibilidad y resistencia térmica, además es un material reutilizable con una alta resistencia a la proliferación de hongos y bacterias.En comparación con otras espumas (espuma viscoelástica) es un material relativamente económico y tiene muy buena adherencia a otros materiales.</p>
+					        <p>3.Velcro x2u:El velcro es un material muy fuerte capaz de contener una gran cantidad de peso, en el uso de nuestra ortesis tiene la función de fijación de una determinada posición y para la presión y ajuste  de esta.</p>
+					        <p>4.Filamento Flexfil y PLA.</p>
+					
 							</div>
 						</div>
 					</div>
