--- a/events.html
+++ b/events.html
@@ -181,7 +181,7 @@
 								<div class="detials col-12 col-md-6">
 									<p>Abril, 2019</p>
 									<a href="semana8.html"><h4>Semana 8</h4></a>
-									<p>Diseño modular de la propuesta</p>
+									<p>Fabricación del prototipo funcional</p>
 								</div>
 							</div>
 						</div>
@@ -193,7 +193,7 @@
 								<div class="detials col-12 col-md-6">
 									<p>Abril, 2019</p>
 									<a href="semana9.html"><h4>Semana 9</h4></a>
-									<p>Diseño modular de la propuesta</p>
+									<p>Fabricación del módulo principal</p>
 								</div>
 							</div>
 						</div>
@@ -205,7 +205,7 @@
 								<div class="detials col-12 col-md-6">
 									<p>Abril, 2019</p>
 									<a href="semana10.html"><h4>Semana 10</h4></a>
-									<p>Diseño modular de la propuesta</p>
+									<p>Fabricación de módulos complementarios</p>
 								</div>
 							</div>
 						</div>
@@ -217,7 +217,7 @@
 								<div class="detials col-12 col-md-6">
 									<p>Abril, 2019</p>
 									<a href="seman11.html"><h4>Semana 11</h4></a>
-									<p>Diseño modular de la propuesta</p>
+									<p>Evaluación de resistencia  </p>
 								</div>
 							</div>
 						</div>
