--- a/semana9.html
+++ b/semana9.html
@@ -116,7 +116,7 @@
 							</div>
 				 <div class="col-md-9 mt-sm-10 left-align-p">
 								<p>
-Para la impresión 3D del AFO se consideró el tipo de filamento PLA tomando las siguientes consideraciones: </p>
+Para la impresión 3D del AFO  se utilizo el tipo de filamento PLA el cual fue elegido tomando en cuenta las siguientes consideraciones: </p>
 					                 </div>
 					<div class="section-top-center">
 					<div style="text-align:center">
