--- a/semana10.html
+++ b/semana10.html
@@ -108,7 +108,7 @@
 								<div class="whole-wrap">
 				<div class="container">
 					<div class="section-top-border">
-						<h3 class="mb-30"></h3>
+						<h3 class="mb-30">INTEGRACION DE LOS VELCROS</h3>
 							</div>
 				 <div class="col-md-9 mt-sm-10 left-align-p">
 								<p>Luego de obtener el AFO impresa en 3D  procedimos a quitar la estructura de soporte y alisar las superficies para luego colocar los velcros en la planta y la pierna 
