--- a/about.html
+++ b/about.html
@@ -219,7 +219,7 @@
 							<div class="thumb-wrap relative">
 								<div class="thumb relative">
 									<div class="overlay overlay-bg"></div>	
-									<img class="img-fluid" src="img/p1.jpg" alt="">
+									<img class="img-fluid" src="img/fotoyo.jpg" alt="">
 								</div>
 								<div class="meta d-flex justify-content-between">
 									<p><span class="lnr lnr-users"></span><span class="lnr lnr-bubble"></span></p>
