--- a/semana11.html
+++ b/semana11.html
@@ -75,9 +75,9 @@
 					<div class="row d-flex align-items-center justify-content-center">
 						<div class="about-content col-lg-12">
 							<h1 class="text-white">
-								SEMANA N°10
+								SEMANA N°11
 						        <h1 class="text-white">
-								Fabricación de módulos complementarios
+								Evaluación de resistencia
 							</h1>	
 						</div>	
 					</div>
@@ -88,10 +88,11 @@
 				<div class="whole-wrap">
 				<div class="container">
 					<div class="section-top-border">
-						<h3 class="mb-30"></h3>
+						<h3 class="mb-30">EVALIACIÓN DE RESISTENCIA</h3>
 							</div>
 				 <div class="col-md-9 mt-sm-10 left-align-p">
-								<p>Luego de obtener el AFO impresa en 3D  procedimos a quitar la estructura de soporte y alisar las superficies para luego colocar los velcros en la planta y la pierna 
+								<p>Para evaluar la durabilidad  y eficacia del AFO impreso en 3D, se realizó la prueba al paciente y observamos las características de su marcha e identificamos las deficiencias .
+La paciente comentó que sentía comodidad pero seguía surgiendo una leve caída del pie y la marcha mejoró a una mínimo de lo esperado.
 .</p>
 							</div>
 				<div class="section-top-center">
@@ -99,7 +100,7 @@
 					<div style="text-align:center">
 						<div class="row gallery-item  justify-content-center">
 							<div class="col-md-4">
-								<a href="img/elements/ato1.PNG" width="200" height="200" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/ato1.PNG);"></div></a>
+								<a href="img/elements/resis1.PNG" width="200" height="200" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/resis1.PNG);"></div></a>
 						          </div>
 					        </div>
 					</div>
@@ -108,18 +109,17 @@
 								<div class="whole-wrap">
 				<div class="container">
 					<div class="section-top-border">
-						<h3 class="mb-30">INTEGRACION DE LOS VELCROS</h3>
+						<h3 class="mb-30">SOLUCIÓN AL RESULTADO ADVERSO</h3>
 							</div>
 				 <div class="col-md-9 mt-sm-10 left-align-p">
-								<p>Luego de obtener el AFO impresa en 3D  procedimos a quitar la estructura de soporte y alisar las superficies para luego colocar los velcros en la planta y la pierna 
-.</p>
+								<p>Por los resultados obtenidos se procedió a desarrollar un soporte en las zonas de la planta (arco longitudinal) y en la pierna con la impresión 3D del modelado. .</p>
 							</div>
 				<div class="section-top-center">
 					<div class="section-top-center">
 					<div style="text-align:center">
 						<div class="row gallery-item  justify-content-center">
 							<div class="col-md-4">
-								<a href="img/elements/ato1.PNG" width="200" height="200" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/ato1.PNG);"></div></a>
+								<a href="img/elements/resi2.PNG" width="200" height="200" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/resis2.PNG);"></div></a>
 						          </div>
 					        </div>
 					</div>
