--- a/events.html
+++ b/events.html
@@ -216,7 +216,7 @@
 								</div>
 								<div class="detials col-12 col-md-6">
 									<p>Abril, 2019</p>
-									<a href="seman11.html"><h4>Semana 11</h4></a>
+									<a href="semana11.html"><h4>Semana 11</h4></a>
 									<p>Evaluación de resistencia  </p>
 								</div>
 							</div>
