--- a/events.html
+++ b/events.html
@@ -229,7 +229,7 @@
 								<div class="detials col-12 col-md-6">
 									<p>Abril, 2019</p>
 									<a href="semana12.html"><h4>Semana 12</h4></a>
-									<p>Diseño modular de la propuesta</p>
+									<p>Evaluación de satisfacción del usuario </p>
 						
 								</div>
 							</div>
