--- a/semana12.html
+++ b/semana12.html
@@ -97,19 +97,7 @@ QUEST (Versión 2.0)
 			<!-- Start Sample Area -->
 				 <section class="row d-flex align-items-center justify-content-center">
 				 <div class="col-md-5 mt-sm-5 center-align-p">
-								<p>Sabían que entre 250 000 y  500 000 personas sufren una Lesión Medular Espinal al año a nivel mundial.Este tipo de lesión causa un impacto personal y social, ya que los cambios en el cuerpo de las personas con paraplejia generan dependencia, afectan la imagen corporal, reducen las oportunidades de empleo, interacción social y estabilidad económica.
-
-Un tipo de lesión es la paraplejia a nivel L5 y S1 que tiene como consecuencia la pérdida de sensibilidad en extremidades inferiores y  formación de pie equino el cual impide realizar la marcha.
-
-Una de las ortesis existentes que contrarrestan este problema es el  AFO rígido que se destaca por su gran ligereza, versatilidad y capacidad de termoconformacion, pero, restringe la flexión plantar y aumenta la flexión de rodilla durante el apoyo. Por otra parte está el DAFO que es flexible, liviano y permite estabilidad para la marcha,sin embargo la mayoría de estudios realizados sobre su uso han sido tan solo a corto plazo.
-
-Nuestro equipo de trabajo ha identificado este problema y hemos creado “ Dynamic lightcheap ” una órtesis tobillo/pie (OTP) dinámica, funcionalmente eficiente y personalizada que permite mantener la estabilidad en el tobillo,debido a la banda elástica y los velcros integrados de manera que el paciente mejore el proceso de caminar. 
-“ Dynamic lightcheap  ” en comparación a las OTPs descritas anteriormente, permite la dorsiflexión del pie siendo a su vez más liviano,de bajo costo y resistente ya que será fabricada con polietileno.  
-
-El mercado en el que nos enfocamos es Claudia una mujer de 35 años,casada procedente de Cercado de Lima que asiste a un centro de estudios superiores y fue herida por impacto de bala en un asalto que le originó esta lesión.
-
-Nuestro equipo tiene la expectativa de reinsertar a Claudia a la sociedad activamente, que no se frustren sus sueños de terminar sus estudios; así mismo no depender de sus familiares,pareja y amigos para movilizarse y librarse de los traumas emocionales ocasionados por tal desgracia, gracias.
-.</p>
+								<p>renato<b>rupay</b>arce </p>
 							</div>
 					 </section>
 				                    </div> 
