--- a/semana12.html
+++ b/semana12.html
@@ -97,8 +97,10 @@ QUEST (Versión 2.0)
 			<!-- Start Sample Area -->
 				 <section class="row d-flex align-items-center justify-content-center">
 				 <div class="col-md-5 mt-sm-5 center-align-p">
-								<p>renato<b>rupay</b>arce </p>
-							</div>
+								<p><h2><b>Dispositivo tecnológico:</b><h2>___Ortesis AFO__________________________________</p>
+						       <p><b>Nombre de usuario:</b>_Angie Benites _________________________________</p>
+					 <p><b>Fecha de evaluación:</b>__ 29/05/19 __________________________</p>
+					 </div>
 					 </section>
 				                    </div> 
 						</div>
