--- a/semana12.html
+++ b/semana12.html
@@ -97,9 +97,9 @@ QUEST (Versión 2.0)
 			<!-- Start Sample Area -->
 				 <section class="row d-flex align-items-center justify-content-center">
 				 <div class="col-md-5 mt-sm-5 center-align-p">
-								<p><b>Dispositivo tecnológico:</b>___Ortesis AFO__________________________________</p>
-						       <p><b>Nombre de usuario:</b>_Angie Benites _________________________________</p>
-					 <p><b>Fecha de evaluación:</b>__ 29/05/19 __________________________</p>
+								<p><b>Dispositivo tecnológico:</b>Ortesis AFO</p>
+						       <p><b>Nombre de usuario:</b>Angie Benites</p>
+					 <p><b>Fecha de evaluación:</b>29/05/19</p>
 					 </div>
 					 </section>
 				                    </div> 
