--- a/semana12.html
+++ b/semana12.html
@@ -100,6 +100,8 @@ QUEST (Versión 2.0)
 								<p><b>Dispositivo tecnológico:</b>Ortesis AFO</p>
 						       <p><b>Nombre de usuario:</b>Angie Benites</p>
 					 <p><b>Fecha de evaluación:</b>29/05/19</p>
+					  <p>El propósito del cuestionario<b>QUEST</b>es evaluar cuán satisfecho está con su dispositivo de asistencia y los servicios relacionados que ha experimentado. El cuestionario consta de 12 artículos de satisfacción.</p>
+					  <p>• Para cada uno de los 12 elementos, califique su satisfacción con su dispositivo de asistencia y los servicios relacionados que usted experimentó utilizando la siguiente escala de 1 a 5.</p>
 					 </div>
 					 </section>
 				                    </div> 
