--- a/semana12.html
+++ b/semana12.html
@@ -102,6 +102,35 @@ QUEST (Versión 2.0)
 					 <p><b>Fecha de evaluación:</b>29/05/19</p>
 					  <p>El propósito del cuestionario<b>QUEST</b>es evaluar cuán satisfecho está con su dispositivo de asistencia y los servicios relacionados que ha experimentado. El cuestionario consta de 12 artículos de satisfacción.</p>
 					  <p>• Para cada uno de los 12 elementos, califique su satisfacción con su dispositivo de asistencia y los servicios relacionados que usted experimentó utilizando la siguiente escala de 1 a 5.</p>
+					 
+					 <table>
+<tr>
+  <td><strong>Curso</strong></td>
+  <td><strong>Horas</strong></td>
+  <td><strong>Horario</strong></td>
+</tr>
+
+<tr>
+  <td>CSS</td>
+  <td>20</td>
+  <td>16:00 - 20:00</td>
+</tr>
+
+<tr>
+  <td>HTML</td>
+  <td>20</td>
+  <td>16:00 - 20:00</td>
+</tr>
+
+<tr>
+  <td>Dreamweaver</td>
+  <td>60</td>
+  <td>16:00 - 20:00</td>
+</tr>
+</table>
+					 <p>• Marque con un círculo o marque el número que mejor describe su grado de satisfacción con cada uno de los 12 artículos.</p>
+					 <p>•<b>No</b> deje ninguna pregunta sin responder.</p>
+					 <p>• Para cualquier artículo que no esté "muy satisfecho", comente en la sección comentarios</p>
 					 </div>
 					 </section>
 				                    </div> 
