--- a/semana12.html
+++ b/semana12.html
@@ -87,9 +87,8 @@
 				<!-- Start Sample Area -->
 		        <section class="row d-flex align-items-center justify-content-center">
 				<div class="about-content col-lg-12">
-					<h1 class="text-black">Evaluación de satisfacción del usuario de Quebec con tecnología de asistencia
-QUEST (Versión 2.0)
-</h1>	
+					<h2 class="text-black">Evaluación de satisfacción del usuario de Quebec con tecnología de asistencia
+QUEST (Versión 2.0)</h2>	
 				</div>
 			</section>
 			<!-- End Sample Area -->
@@ -102,7 +101,7 @@ QUEST (Versión 2.0)
 					 <p><b>Fecha de evaluación:</b>29/05/19</p>
 					  <p>El propósito del cuestionario<b>QUEST</b>es evaluar cuán satisfecho está con su dispositivo de asistencia y los servicios relacionados que ha experimentado. El cuestionario consta de 12 artículos de satisfacción.</p>
 					  <p>• Para cada uno de los 12 elementos, califique su satisfacción con su dispositivo de asistencia y los servicios relacionados que usted experimentó utilizando la siguiente escala de 1 a 5.</p>
-					 
+					<!-- Start Sample Area --> 
 					 <table>
 <tr>
   <td><strong>Curso</strong></td>
@@ -128,9 +127,12 @@ QUEST (Versión 2.0)
   <td>16:00 - 20:00</td>
 </tr>
 </table>
+					<!-- End Sample Area --> 
 					 <p>• Marque con un círculo o marque el número que mejor describe su grado de satisfacción con cada uno de los 12 artículos.</p>
 					 <p>•<b>No</b> deje ninguna pregunta sin responder.</p>
 					 <p>• Para cualquier artículo que no esté "muy satisfecho", comente en la sección comentarios</p>
+					 
+					 <p>Gracias por completar el cuestionario QUEST.</p>
 					 </div>
 					 </section>
 				                    </div> 
