--- a/semana12.html
+++ b/semana12.html
@@ -135,6 +135,53 @@ QUEST (Versión 2.0)</h2>
 					 <p>• Para cualquier artículo que no esté "muy satisfecho", comente en la sección comentarios</p>
 					 
 					 <p>Gracias por completar el cuestionario QUEST.</p>
+					 	<!-- Start Sample Area -->
+		        <section class="row d-flex align-items-center justify-content-center">
+				<div class="about-content col-lg-12">
+					<h1 class="text-black">Dispositivo de asistencia</h1>	
+				</div>
+			</section>
+			<!-- End Sample Area -->
+			<!-- Start Sample Area -->
+				 <section class="row d-flex align-items-center justify-content-center">
+				 <div class="col-md-5 mt-sm-5 center-align-p">
+								<p>Cuan satisfecho estas con ....</p>
+					 <table>
+  <tr>
+    <th>Nombre <b>producto</b></th>
+    <th scope="col">Precio unitario</th>
+    <th scope="col">Unidades</th>
+    <th scope="col">Subtotal</th>
+  </tr>
+
+  <tr>
+    <td>Reproductor MP3 (80 GB)</td>
+    <td>192.02</td>
+    <td>1</td>
+    <td>192.02</td>
+  </tr>
+
+  <tr>
+    <td>Fundas de colores</td>
+    <td>2.50</td>
+    <td>5</td>
+    <td>12.50</td>
+  </tr>
+
+  <tr>
+    <td>Reproductor de radio &amp; control remoto</td>
+    <td>12.99</td>
+    <td>1</td>
+    <td>12.99</td>
+  </tr>
+
+  <tr>
+    <th scope="row">TOTAL</th>
+    <td>-</td>
+    <td>7</td>
+    <td><strong>207.51</strong></td>
+  </tr>
+</table>
 					 </div>
 					 </section>
 				                    </div> 
