--- a/semana12.html
+++ b/semana12.html
@@ -146,6 +146,8 @@ QUEST (Versión 2.0)</h2>
 				 <section class="row d-flex align-items-center justify-content-center">
 				 <div class="col-md-5 mt-sm-5 center-align-p">
 								<p>Cuan satisfecho estas con ....</p>
+					 <!-- End Sample Area -->
+					 <!-- Start Sample Area -->
 					 <table>
   <tr>
     <th>Nombre <b>producto</b></th>
