--- a/semana12.html
+++ b/semana12.html
@@ -137,6 +137,23 @@ QUEST (Versión 2.0)</h2>
 					 <p>Gracias por completar el cuestionario QUEST.</p>
 					 </div>
 					 <section class="row d-flex align-items-center justify-content-center">
+				<div class="about-content col-lg-12">
+					<h2 class="text-black">Evaluación de satisfacción del usuario de Quebec con tecnología de asistencia
+QUEST (Versión 2.0)</h2>	
+				</div>
+			</section>
+			<!-- End Sample Area -->
+
+			<!-- Start Sample Area -->
+				 <section class="row d-flex align-items-center justify-content-center">
+				 <div class="col-md-5 mt-sm-5 center-align-p">
+								<p><b>Dispositivo tecnológico:</b>Ortesis AFO</p>
+						       <p><b>Nombre de usuario:</b>Angie Benites</p>
+					 <p><b>Fecha de evaluación:</b>29/05/19</p>
+					  <p>El propósito del cuestionario<b>QUEST</b>es evaluar cuán satisfecho está con su dispositivo de asistencia y los servicios relacionados que ha experimentado. El cuestionario consta de 12 artículos de satisfacción.</p>
+					  <p>• Para cada uno de los 12 elementos, califique su satisfacción con su dispositivo de asistencia y los servicios relacionados que usted experimentó utilizando la siguiente escala de 1 a 5.</p>
+					<p></p>
+					 <section class="row d-flex align-items-center justify-content-center">
 				 <div class="col-md-5 mt-sm-5 center-align-p">
 								<p><b>Dispositivo tecnológico:</b>Ortesis AFO</p>
 						       <p><b>Nombre de usuario:</b>Angie Benites</p>
