--- a/semana12.html
+++ b/semana12.html
@@ -138,13 +138,32 @@ QUEST (Versión 2.0)</h2>
 					 </div>
 					 <section class="row d-flex align-items-center justify-content-center">
 				<div class="about-content col-lg-12">
-					<h2 class="text-black">Evaluación de satisfacción del usuario de Quebec con tecnología de asistencia
-QUEST (Versión 2.0)</h2>	
+					<h2 class="text-black">DISPOSITIVO DE ASISTENCIA</h2>	
 				</div>
 			</section>
 			<!-- End Sample Area -->
 
 			<!-- Start Sample Area -->
+					 <table>
+<tr>
+  <td colspan="6"><b>¿Cuán satisfecho estás con..</b></td>
+</tr>
+
+<tr>
+  <td><p>1.Las <b>dimensiones</b>(tamaño, altura, longitud, anchura) de su dispositivo de asistencia?</p></td>
+  <td>C</td>
+	<td>C</td>
+	<td>C</td>
+	<td>C</td>
+	<td>C</td>
+	td>C</td>
+	<td>C</td>
+	<td>C</td>
+	<td>C</td>
+	<td>C</td>
+	
+</tr>
+</table>
 				 <section class="row d-flex align-items-center justify-content-center">
 				 <div class="col-md-5 mt-sm-5 center-align-p">
 								<p><b>Dispositivo tecnológico:</b>Ortesis AFO</p>
@@ -180,11 +199,8 @@ QUEST (Versión 2.0)</h2>
 </table>
 					<p></p>
 					 <p></p>
-					 <p>• Marque con un círculo o marque el número que mejor describe su grado de satisfacción con cada uno de los 12 artículos.</p>
-					 <p>•<b>No</b> deje ninguna pregunta sin responder.</p>
-					 <p>• Para cualquier artículo que no esté "muy satisfecho", comente en la sección comentarios</p>
+					 <p>• A continuación se muestra la lista de los mismos 8 elementos de satisfacción. <b>POR FAVOR SELECCIONE LOS TRES PUNTOS</b> que consideras que son los más <b>importantes para ti</b>. Por favor Pon una X en las <b>3 casillas</b> que elijas.</p>
 					 
-					 <p>Gracias por completar el cuestionario QUEST.</p>
 					 </section>
 				                    </div> 
 						</div>
