--- a/semana12.html
+++ b/semana12.html
@@ -125,6 +125,8 @@ QUEST (Versión 2.0)</h2>
 					 
 					 <p>Gracias por completar el cuestionario QUEST.</p>
 					 </div>
+					 <!-- End Sample Area -->
+					 <!-- Start Sample Area -->
 					 <section class="row d-flex align-items-center justify-content-center">
 				<div class="about-content col-lg-12">
 					<h2 class="text-black">DISPOSITIVO DE ASISTENCIA</h2>	
