--- a/semana12.html
+++ b/semana12.html
@@ -124,7 +124,10 @@ QUEST (Versión 2.0)</h2>
 					 <p>• Para cualquier artículo que no esté "muy satisfecho", comente en la sección comentarios</p>
 					 
 					 <p>Gracias por completar el cuestionario QUEST.</p>
+					  </section>
 					 </div>
+				 </div>
+			 </div>
 					 <!-- End Sample Area -->
 					 <!-- Start Sample Area -->
 					 <section class="row d-flex align-items-center justify-content-center">
@@ -135,17 +138,7 @@ QUEST (Versión 2.0)</h2>
 			<!-- End Sample Area -->
 
 			<!-- Start Sample Area -->
-					 <table>
-<tr>
-  <td colspan="6"><b>¿Cuán satisfecho estás con..</b></td>
-</tr>
-
-<tr>
-  <td><p>1.Las <b>dimensiones</b>(tamaño, altura, longitud, anchura) de su dispositivo de asistencia?</p></td>
- 
-	
-</tr>
-</table>
+					
 				 <section class="row d-flex align-items-center justify-content-center">
 				 <div class="col-md-5 mt-sm-5 center-align-p">
 								<p><b>Dispositivo tecnológico:</b>Ortesis AFO</p>
@@ -154,31 +147,6 @@ QUEST (Versión 2.0)</h2>
 					  <p>El propósito del cuestionario<b>QUEST</b>es evaluar cuán satisfecho está con su dispositivo de asistencia y los servicios relacionados que ha experimentado. El cuestionario consta de 12 artículos de satisfacción.</p>
 					  <p>• Para cada uno de los 12 elementos, califique su satisfacción con su dispositivo de asistencia y los servicios relacionados que usted experimentó utilizando la siguiente escala de 1 a 5.</p>
 					<p></p>
-					 <table>
-<tr>
-  <td><strong>Curso</strong></td>
-  <td><strong>Horas</strong></td>
-  <td><strong>Horario</strong></td>
-</tr>
-
-<tr>
-  <td>CSS</td>
-  <td>20</td>
-  <td>16:00 - 20:00</td>
-</tr>
-
-<tr>
-  <td>HTML</td>
-  <td>20</td>
-  <td>16:00 - 20:00</td>
-</tr>
-
-<tr>
-  <td>Dreamweaver</td>
-  <td>60</td>
-  <td>16:00 - 20:00</td>
-</tr>
-</table>
 					<p></p>
 					 <p></p>
 					 <p>• A continuación se muestra la lista de los mismos 8 elementos de satisfacción. <b>POR FAVOR SELECCIONE LOS TRES PUNTOS</b> que consideras que son los más <b>importantes para ti</b>. Por favor Pon una X en las <b>3 casillas</b> que elijas.</p>
