--- a/semana12.html
+++ b/semana12.html
@@ -141,7 +141,25 @@ QUEST (Versión 2.0)</h2>
 					
 				 <section class="row d-flex align-items-center justify-content-center">
 				 <div class="col-md-5 mt-sm-5 center-align-p">
-								<p><b>Dispositivo tecnológico:</b>Ortesis AFO</p>
+								<p></p>
+<table>
+<tr>
+  <td colspan="6"><b>¿Cuán satisfecho estás con...</b></td>
+</tr>
+
+<tr>
+  <td>1.	Las dimensiones (tamaño, altura, longitud, anchura) de su dispositivo de asistencia?
+Comentarios:
+En el velcro numero 2 deja una marca
+</td>
+  <td>1</td>
+  <td>2</td>
+<td><b>3</b></td>
+<td>4</td>
+<td>5</td>
+<td>C</td>
+</tr>
+</table>
 						       <p><b>Nombre de usuario:</b>Angie Benites</p>
 					 <p><b>Fecha de evaluación:</b>29/05/19</p>
 					  <p>El propósito del cuestionario<b>QUEST</b>es evaluar cuán satisfecho está con su dispositivo de asistencia y los servicios relacionados que ha experimentado. El cuestionario consta de 12 artículos de satisfacción.</p>
