--- a/semana12.html
+++ b/semana12.html
@@ -104,15 +104,15 @@ QUEST (Versión 2.0)</h2>
 					<p></p>
 					 <table>
 <tr>
-  <td colspan="5">1    2     3    4      5</td>
+  <td colspan="5"></td>
 </tr>
 
 <tr>
-  <td>No satisfecho en absoluto</td>
-  <td>No muy satisfecho</td>
-	<td>Más o menos satisfecho</td>
-	<td>Bastante satisfecho</td>
-	<td>Muy satisfecho</td>
+  <td>1.No satisfecho en absoluto</td>
+  <td>2.No muy satisfecho</td>
+	<td>3.Más o menos satisfecho</td>
+	<td>4.Bastante satisfecho</td>
+	<td>5.Muy satisfecho</td>
 </tr>
 </table>
 					 
@@ -144,7 +144,7 @@ QUEST (Versión 2.0)</h2>
 								<p></p>
 <table>
 <tr>
-  <td colspan="6"><b>¿Cuán satisfecho estás con...</b></td>
+  <td colspan="11"><b>¿Cuán satisfecho estás con...</b></td>
 </tr>
 
 <tr>
@@ -153,11 +153,67 @@ Comentarios:
 En el velcro numero 2 deja una marca
 </td>
   <td>1</td>
-  <td>2</td>
+  <td></td>
+<td>2</td>
+<td></td>
 <td><b>3</b></td>
-<td>4</td>
-<td>5</td>
-<td>C</td>
+<td></td>
+	<td>4</td>
+	<td></td>
+	<td>5</td>
+	<td></td>
+	<td>2.	El peso de su dispositivo de asistencia?
+Comentarios:
+</td>
+	<td>1</td>
+	<td></td>
+	<td>2</td>
+	<td></td>
+	<td>3</td>
+	<td></td>
+	<td>4</td>
+	<td></td>
+	<td>5</td>
+	<td></td>
+	<td>3.	La facilidad de ajuste (fijación, fijación) de las piezas de su dispositivo de asistencia?
+Comentarios :
+</td>
+	<td>1</td>
+	<td></td>
+	<td>2</td>
+	<td></td>
+	<td>3</td>
+	<td></td>
+	<td>4</td>
+	<td></td>
+	<td>5</td>
+	<td></td>
+	<td>4.	Qué tan seguro es su dispositivo de asistencia?
+Comentarios:
+</td>
+	<td>1</td>
+	<td></td>
+	<td>2</td>
+	<td></td>
+	<td>3</td>
+	<td></td>
+	<td>4</td>
+	<td></td>
+	<td>5</td>
+	<td></td>
+	<td>5.	La durabilidad (resistencia, resistencia al desgaste) de su dispositivo de asistencia?
+Comentarios:
+</td>
+	<td>1</td>
+	<td></td>
+	<td>2</td>
+	<td></td>
+	<td>3</td>
+	<td></td>
+	<td>4</td>
+	<td></td>
+	<td>5</td>
+	<td></td>
 </tr>
 </table>
 						       <p><b>Nombre de usuario:</b>Angie Benites</p>
