--- a/semana12.html
+++ b/semana12.html
@@ -226,7 +226,13 @@ Comentarios:
 </table>
 					
 					 <p>• A continuación se muestra la lista de los mismos 8 elementos de satisfacción. <b>POR FAVOR SELECCIONE LOS TRES PUNTOS</b> que consideras que son los más <b>importantes para ti</b>. Por favor Pon una X en las <b>3 casillas</b> que elijas.</p>
-					 
+					 </div>
+							<div class="row">
+							<div class="col-md-3">
+								<img src="img/elements/rnt.PNG" alt="" class="png-fluid" width=200 height=200>>
+							</div>
+						</div>
+					</div>
 					 </section>
 				                    </div> 
 						</div>
