--- a/semana12.html
+++ b/semana12.html
@@ -226,6 +226,9 @@ Comentarios:
 </table>
 					
 					 <p>• A continuación se muestra la lista de los mismos 8 elementos de satisfacción. <b>POR FAVOR SELECCIONE LOS TRES PUNTOS</b> que consideras que son los más <b>importantes para ti</b>. Por favor Pon una X en las <b>3 casillas</b> que elijas.</p>
+					<!-- End Sample Area -->
+
+			<!-- Start Sample Area -->
 					 </div>
 							<div class="row">
 							<div class="col-md-3">
