--- a/semana12.html
+++ b/semana12.html
@@ -232,7 +232,7 @@ Comentarios:
 					 </div>
 							<div class="row">
 							<div class="col-md-3">
-								<img src="img/elements/rnt.PNG" alt="" class="png-fluid" width=200 height=200>>
+								<img src="img/elements/rnt.PNG" alt="" class="png-fluid" width=300 height=300>
 							</div>
 						</div>
 					</div>
