--- a/semana12.html
+++ b/semana12.html
@@ -188,7 +188,7 @@ Comentarios :
 	<td></td>
 	<td><b>3</b></td>
 	<td></td>
-	<td><b>4</b></td>
+	<td>4</td>
 	<td></td>
 	<td>5</td>
 	<td></td>
@@ -199,7 +199,7 @@ Comentarios:
 </td>
 	<td>1</td>
 	<td></td>
-	<td><b>2</b></td>
+	<td></td>
 	<td></td>
 	<td>3</td>
 	<td></td>
@@ -211,6 +211,53 @@ Comentarios:
 	<tr>
 	<td>5.	La durabilidad (resistencia, resistencia al desgaste) de su dispositivo de asistencia?
 Comentarios:
+</td>
+	<td>1</td>
+	<td></td>
+	<td>2</td>
+	<td></td>
+	<td>3</td>
+	<td></td>
+	<td><b>4</b></td>
+	<td></td>
+	<td>5</td>
+	<td></td>
+</tr>
+	<tr>
+	<td>6.	Qué tan fácil es usar su dispositivo de asistencia?
+Comentarios:
+</td>
+	<td>1</td>
+	<td></td>
+	<td>2</td>
+	<td></td>
+	<td>3</td>
+	<td></td>
+	<td><b>4</b></td>
+	<td></td>
+	<td>5</td>
+	<td></td>
+</tr>
+	<tr>
+	<td>7.	Qué tan cómodo es su dispositivo de asistencia?
+Comentarios:
+
+</td>
+	<td>1</td>
+	<td></td>
+	<td><b>2</b></td>
+	<td></td>
+	<td>3</td>
+	<td></td>
+	<td>4</td>
+	<td></td>
+	<td>5</td>
+	<td></td>
+</tr>
+	<tr>
+	<td>8.	Qué tan efectivo es su dispositivo de asistencia (su dispositivo satisface sus necesidades)?
+Comentarios:
+
 </td>
 	<td>1</td>
 	<td></td>
@@ -237,9 +284,7 @@ Comentarios:
 							<div class="row">
 							<div class="col-md-3">
 								<img src="img/elements/rnt.PNG" alt="" class="png-fluid" width=300 height=300>
-
-					 </section>
-				                    </div> 
+                                                       </div> 
 						</div>
 				    </div>
 			
