--- a/semana12.html
+++ b/semana12.html
@@ -281,10 +281,12 @@ Comentarios:
 
 			              <!-- Start Sample Area -->
 					 </div>
+<center>
 							<div class="row">
 							<div class="col-md-3">
-								<img src="img/elements/rnt.PNG" alt="" class="png-fluid" width=300 height=300>
-                                                       </div> 
+								<img src="img/elements/rnt.PNG" alt="" class="png-fluid" width=400 height=400>
+                                                       </center>
+								</div> 
 						</div>
 				    </div>
 			
