--- a/semana12.html
+++ b/semana12.html
@@ -375,12 +375,13 @@ Comentarios:
 					 <!-- End Sample Area -->
 
 			              <!-- Start Sample Area -->
-					 </div>
-<center>
-							<div class="row">
-							<div class="col-md-3">
-								<img src="img/elements/rnt.PNG" alt="" class="png-fluid" width=400 height=400>
-                                                       </center>
+					</div>
+				<div class="section-top-center">
+					<div style="text-align:center">
+						<div class="row gallery-item  justify-content-center">
+							<div class="col-md-4">
+							<img src="img/elements/rnt.PNG" alt="" class="png-fluid">
+					
 								</div> 
 						</div>
 				    </div>
