--- a/semana11.html
+++ b/semana11.html
@@ -112,7 +112,7 @@ La paciente comentó que sentía comodidad pero seguía surgiendo una leve caíd
 						<h3 class="mb-30">SOLUCIÓN AL RESULTADO ADVERSO</h3>
 							</div>
 				 <div class="col-md-9 mt-sm-10 left-align-p">
-								<p>Por los resultados obtenidos se procedió a desarrollar un soporte en las zonas de la planta (arco longitudinal) y en la pierna con la impresión 3D del modelado. .</p>
+								<p>Con la ortesis obtenida impreso con flexfil se realizo una prueba objetiva en el usuario y observamos que la ortesis no era capaz de mantener el pie en 90 y al momento de caminar se deformaba de tal manera que no mantenia estabilidad en el tobillo .Debido a estos resultados adversos obtenidos  tomamos  como referencia el modelado de la ortesis  hecha de flexfil delimitando la mitad inferior para modelar un soporte rigido que cubra la planta (arco longitudinal) y la parte superior del tobillo,ya que en estas zonas cae el peso del usuario.Además debido a cuestiones de tiempo el soporte rigido se diseno utilizando la tecnica voronoi.Finalmente se pocedio a imprimir el soporte rigido en filamento PLA..</p>
 							</div>
 				<div class="section-top-center">
 					<div class="section-top-center">
