--- a/semana2.html
+++ b/semana2.html
@@ -239,13 +239,13 @@ Paciente ingresa por trauma shock, luego de sufrir heridas por arma de fuego dur
 						<h2 class="mb-30">REFERENCIAS</h2>
 						</div>
 					         <div class="col-md-9 mt-sm-0 left-align-p">
-								<p>-Organización Mundial de la Salud. (2013). International Perspectives on Spinal Cord Injury. Summary. 2014, de Swiss Paraplegic Research (SPF)</p>
-							 <p>-Forner Cordero, Isabel. (2005). Tratamiento conservador versus quirurgico de la paraplejia traumática por fracturas torácicas y lumbares.. 17-06-2005, de Universitat de València. Departament de Medicina</p>
 							 <p>-Cohen ME, Ditunno JF, Donovan WH, Maynard FM. A test of the 1992 International Standards for neurological and functional classification of spinal cord injury. Spinal cord. 1998;36:554-60.</p>
-                                                         <p>-Organización Mundial de la Salud. (2013, 19 noviembre). Lesiones medulares. 16 marzo, 2019</p>
-							  <p>-Mayo Clinic. (2017a, 19 diciembre). Lesiones de la médula espinal - Síntomas y causas - Mayo Clinic. 16 marzo, 2019.</p>
+							 <p>-Forner Cordero, Isabel. (2005). Tratamiento conservador versus quirurgico de la paraplejia traumática por fracturas torácicas y lumbares.. 17-06-2005, de Universitat de València. Departament de Medicina.</p>
+                                                         <p>-Mayo Clinic. (2017a, 19 diciembre). Lesiones de la médula espinal - Síntomas y causas - Mayo Clinic. 16 marzo, 2019.</p>
+							  <p>-Organización Mundial de la Salud. (2013, 19 noviembre). Lesiones medulares. 16 marzo, 2019.</p>
+							  <p>-Organización Mundial de la Salud. (2013). International Perspectives on Spinal Cord Injury. Summary. 2014, de Swiss Paraplegic Research (SPF).</p>
 							  <p>-Personal de Mayo Clinic. (2017). Lesiones de la médula espinal. marzo 15,2019, de Mayo Clinic.</p>
-							  <p>-Yolanda Smith. (2018). Complicaciones de la paraplejia. marzo 15,2019, de News Medical.</p>
+							 <p>-Yolanda Smith. (2018). Complicaciones de la paraplejia. marzo 15,2019, de News Medical.</p>
 					</div>
 					        </div>
 					</div>	
