--- a/semana10.html
+++ b/semana10.html
@@ -85,6 +85,12 @@
 			</section>
 			<!-- End banner Area -->
 			<!-- Start Sample Area -->
+					<div class="whole-wrap">
+				<div class="container">
+					<div class="section-top-border">
+						<h3 class="mb-30">AFO Impresa en 3D</h3>
+						<div class="row">
+						<div class="col-md-9 mt-sm-10 left-align-p">
 				<div class="whole-wrap">
 				<div class="container">
 					<div class="section-top-border">
