--- a/semana10.html
+++ b/semana10.html
@@ -135,7 +135,7 @@
 					<div class="whole-wrap">
 				<div class="container">
 					<div class="section-top-border">
-						<h3 class="mb-30">EVALIACIÓN DE RESISTENCIA</h3>
+						<h3 class="mb-30">EVALUACIÓN DE RESISTENCIA</h3>
 							</div>
 				 <div class="col-md-9 mt-sm-10 left-align-p">
 								<p>Para evaluar la durabilidad  y eficacia del AFO impreso en 3D, se realizó la prueba al paciente y observamos las características de su marcha e identificamos las deficiencias .
@@ -143,16 +143,28 @@ La paciente comentó que sentía comodidad pero seguía surgiendo una leve caíd
 .</p>
 							</div>
 				<div class="section-top-center">
-					<div class="section-top-center">
 					<div style="text-align:center">
 						<div class="row gallery-item  justify-content-center">
 							<div class="col-md-4">
-								<a href="img/elements/resis1.PNG" width="200" height="200" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/resis1.PNG);"></div></a>
-						          </div>
-					        </div>
-					</div>
+							<img src="img/elements/123456.PNG" alt="" class="png-fluid">
+					
+								</div> 
+						</div>
+				    </div>
 			<!-- End Sample Area -->
 			<!-- Start Sample Area -->
+			<div class="whole-wrap">
+			<div class="container">
+					<div class="section-top-border">
+						<h3 class="mb-30">Video de la marcha del paciente con la AFO impresa en 3D:</h3>
+							</div>
+				 <div class="col-md-9 mt-sm-10 left-align-p">
+								<p>La paciente comentó que sentía comodidad pero seguía surgiendo una leve caída del pie y la marcha mejoró a una mínimo de lo esperado, por el cual concluimos la falta de soporte del pie para mantenerlo a 90°.</p>
+				</div>
+				</div>
+				</div>
+					<!-- End Sample Area -->
+						<!-- Start Sample Area -->
 			<div class="whole-wrap">
 			<div class="container">
 					<div class="section-top-border">
