--- a/semana10.html
+++ b/semana10.html
@@ -158,6 +158,8 @@ La paciente comentó que sentía comodidad pero seguía surgiendo una leve caíd
 					<div class="section-top-border">
 						<h3 class="mb-30">Video de la marcha del paciente con la AFO impresa en 3D:</h3>
 							</div>
+				<video src="img/elements/video1.mp4" poster="video1.mp4" controls></video>
+<video src="video.mp4" autoplay muted loop></video>
 				 <div class="col-md-9 mt-sm-10 left-align-p">
 								<p>La paciente comentó que sentía comodidad pero seguía surgiendo una leve caída del pie y la marcha mejoró a una mínimo de lo esperado, por el cual concluimos la falta de soporte del pie para mantenerlo a 90°.</p>
 				</div>
