--- a/events.html
+++ b/events.html
@@ -205,7 +205,7 @@
 								<div class="detials col-12 col-md-6">
 									<p>Abril, 2019</p>
 									<a href="semana10.html"><h4>Semana 10</h4></a>
-									<p>Fabricación de módulos complementarios</p>
+									<p>Fabricación de módulos complementarios y evaluación de resistencia</p>
 								</div>
 							</div>
 						</div>
