--- a/events.html
+++ b/events.html
@@ -217,7 +217,7 @@
 								<div class="detials col-12 col-md-6">
 									<p>Abril, 2019</p>
 									<a href="semana11.html"><h4>Semana 11</h4></a>
-									<p>Evaluación de resistencia  </p>
+									<p>Impresión del soporte en 3D</p>
 								</div>
 							</div>
 						</div>
@@ -229,6 +229,19 @@
 								<div class="detials col-12 col-md-6">
 									<p>Abril, 2019</p>
 									<a href="semana12.html"><h4>Semana 12</h4></a>
+									<p>Prototipo final </p>
+						
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-6 pb-30">
+							<div class="single-carusel row align-items-center">
+								<div class="col-12 col-md-6 thumb">
+									<img class="img-fluid" src="img/semana1.PNG" alt="">
+								</div>
+								<div class="detials col-12 col-md-6">
+									<p>Abril, 2019</p>
+									<a href="semana13.html"><h4>Semana 12</h4></a>
 									<p>Evaluación de satisfacción del usuario </p>
 						
 								</div>
