--- a/semana11.html
+++ b/semana11.html
@@ -75,9 +75,9 @@
 					<div class="row d-flex align-items-center justify-content-center">
 						<div class="about-content col-lg-12">
 							<h1 class="text-white">
-								SEMANA N°10
+								SEMANA N°11
 						        <h1 class="text-white">
-								Fabricación de módulos complementarios
+								IMPRESIÓN 3D DEL SOPORTE
 							</h1>	
 						</div>	
 					</div>
@@ -88,7 +88,7 @@
 					<div class="whole-wrap">
 				<div class="container">
 					<div class="section-top-border">
-						<h3 class="mb-30">AFO Impresa en 3D</h3>
+						<h3 class="mb-30"></h3>
 						<div class="row">
 						<div class="col-md-9 mt-sm-10 left-align-p">
 				<div class="whole-wrap">
@@ -96,15 +96,11 @@
 					<div class="section-top-border">
 						<h3 class="mb-30"></h3>
 							</div>
-				 <div class="col-md-9 mt-sm-10 left-align-p">
-								<p>Luego de obtener el AFO impresa en 3D  procedimos a quitar la estructura de soporte y alisar las superficies para luego colocar los velcros en la planta y la pierna 
-.</p>
-							</div>
-				<div class="section-top-center">
+					<div class="section-top-center">
 					<div style="text-align:center">
 						<div class="row gallery-item  justify-content-center">
 							<div class="col-md-4">
-							<img src="img/elements/1234.PNG" alt="" class="png-fluid">
+							<img src="img/elements/12345678.PNG" alt="" class="png-fluid">
 					
 								</div> 
 						</div>
