--- a/semana11.html
+++ b/semana11.html
@@ -88,7 +88,7 @@
 					<div class="whole-wrap">
 				<div class="container">
 					<div class="section-top-border">
-						<h3 class="mb-30"></h3>
+						<h3 class="mb-30">Impresión 3D</h3>
 						<div class="row">
 						<div class="col-md-9 mt-sm-10 left-align-p">
 				<div class="whole-wrap">
