--- a/semana11.html
+++ b/semana11.html
@@ -101,8 +101,10 @@
 						<div class="row gallery-item  justify-content-center">
 							<div class="col-md-4">
 							<img src="img/elements/12345678.PNG" alt="" class="png-fluid">
-					
-								</div> 
+					     </div>
+							<div class="col-md-9 mt-sm-10 left-align-p">
+								<p>El soporte rígido obtenido se colocará en el AFO de PET(Polietileno Tereftalato) para que pueda cumplir su función de mantener la posición del pie a 90° y mejorar la estabilidad..</p>
+							</div>
 						</div>
 				    </div>
 			<!-- End Sample Area -->
