--- a/semana11.html
+++ b/semana11.html
@@ -88,7 +88,7 @@
 					<div class="whole-wrap">
 				<div class="container">
 					<div class="section-top-border">
-						<h3 class="mb-30">Impresión 3D</h3>
+						<h3 class="mb-30">IMPRESIÓN 3D</h3>
 						<div class="row">
 						<div class="col-md-9 mt-sm-10 left-align-p">
 				<div class="whole-wrap">
@@ -112,17 +112,16 @@
 								<div class="whole-wrap">
 				<div class="container">
 					<div class="section-top-border">
-						<h3 class="mb-30">INTEGRACION DE LOS VELCROS</h3>
+						<h3 class="mb-30">ADHESIÓN DEL SOPORTE AL AFO DE  POLIETILENO TEREFTALATO</h3>
 							</div>
 				 <div class="col-md-9 mt-sm-10 left-align-p">
-								<p>Luego de obtener el AFO impresa en 3D  procedimos a quitar la estructura de soporte y alisar las superficies para luego colocar los velcros en la planta y la pierna 
-.</p>
+								<p>Todos los componentes de la ortesis diseñada fueron posicionados y puestos en contacto con la pierna de la paciente para ser evaluados ..</p>
 							</div>
 				<div class="section-top-center">
 					<div style="text-align:center">
 						<div class="row gallery-item  justify-content-center">
 							<div class="col-md-4">
-							<img src="img/elements/12345.PNG" alt="" class="png-fluid">
+							<img src="img/elements/123456789.PNG" alt="" class="png-fluid">
 					
 								</div> 
 						</div>
