--- a/semana11.html
+++ b/semana11.html
@@ -132,12 +132,10 @@
 					<div class="whole-wrap">
 				<div class="container">
 					<div class="section-top-border">
-						<h3 class="mb-30">EVALUACIÓN DE RESISTENCIA</h3>
+						<h3 class="mb-30">EVALUACIÓN DE RESISTENCIA #2</h3>
 							</div>
 				 <div class="col-md-9 mt-sm-10 left-align-p">
-								<p>Para evaluar la durabilidad  y eficacia del AFO impreso en 3D, se realizó la prueba al paciente y observamos las características de su marcha e identificamos las deficiencias .
-La paciente comentó que sentía comodidad pero seguía surgiendo una leve caída del pie y la marcha mejoró a una mínimo de lo esperado.
-.</p>
+								<p>Para evaluar la durabilidad  y eficacia del AFO y el soporte  impreso en 3D, se realizó la prueba al paciente y observamos las características de su marcha e identificamos las deficiencias..</p>
 							</div>
 				<div class="section-top-center">
 					<div style="text-align:center">
@@ -153,9 +151,9 @@ La paciente comentó que sentía comodidad pero seguía surgiendo una leve caíd
 			<div class="whole-wrap">
 			<div class="container">
 					<div class="section-top-border">
-						<h3 class="mb-30">Video de la marcha del paciente con la AFO impresa en 3D:</h3>
+						<h3 class="mb-30">Video de la marcha del paciente con el prototipo:</h3>
 							</div>
-				<video src="img/elements/video1.mp4" poster="video1.mp4" controls></video>
+				<video src="img/elements/video2.mp4" poster="video1.mp4" controls></video>
 <video src="video.mp4" autoplay muted loop></video>
 				 <div class="col-md-9 mt-sm-10 left-align-p">
 								<p>La paciente comentó que sentía comodidad pero seguía surgiendo una leve caída del pie y la marcha mejoró a una mínimo de lo esperado, por el cual concluimos la falta de soporte del pie para mantenerlo a 90°.</p>
